Shipping quality code, fixed spacing issue in main content due to which it was showing scrollbar even if it wasnt necessary

--- a/client/src/components/Layout/MainLayout.css
+++ b/client/src/components/Layout/MainLayout.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   width: 100%;
   /* margin-top: 100px; */
-  min-height: calc(100vh - 80px);
+  height: calc(100vh - 80px);
 }
 
 .layout {
